# google-hackathon-2024

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS  dependabot.yml
.github/actions/build-push/: action.yaml
.github/actions/deploy-run-services/: action.yaml
.github/workflows/: prod-deploy.yaml  static-analysis-and-test.yaml
b-moz/api/: api_base.py
b-moz/api/hello/: __init__.py  hello.py
b_moz/: main.py
b_moz/api/: README.md  __init__.py  api_base.py
b_moz/api/collect/: __init__.py  catalog_api.py
b_moz/domain/: base.py
b_moz/domain/query/: query.py
b_moz/domain/spec/: smartphone.py  source.py
b_moz/libs/: project.py
b_moz/libs/chains/: mock_chain.py  model_extract.py
b_moz/libs/chains/latest_models_list/: chain.py  prompt.py
b_moz/libs/chains/spec_extract/: chain.py  prompt.py
b_moz/libs/document_loaders/: custom_bs_loader.py
b_moz/libs/io/: exporter.py  google.py  parser.py
b_moz/libs/llms/: mock_model.py  vertexai.py
b_moz/libs/o11y/: gc_logging.py  trace.py
b_moz/libs/retreivers/: google_search.py  model_detail_retriever.py
b_moz/repository/: base.py
b_moz/repository/pubsub/: pubsub.py  push.py
b_moz/repository/spreadsheet/: base.py  query.py  smartphone.py
b_moz/usecase/: collect_latest_items.py  collect_spec.py  save.py
b_moz/usecase/grounding/: base.py  catalog.py  model_detail_prediction.py
docs/: local-execution-detail.md
migration/: v000.md
resources/secrets/: .env.example
scripts/: run.sh
tests/: test_smartphone.py
tools/notebooks/: validation.ipynb
