[tool.poetry]
name = "b_moz"
version = "0.1.0"
description = "Belong catalog collector via AI"
authors = ["ttyfky <tatsuya@belong.co.jp>", " tomoyukik <kobori-t@belong.co.jp>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.13"
flask = "^3.0.3"
flask-restful = "^0.3.10"
waitress = "^3.0.0"

langchain-google-vertexai = "^1.0.10"
langchain-google-community = "^1.0.8"
bs4 = "^0.0.2"
lxml = "^5.3.0"
gspread = "^6.1.2"
gspread-dataframe = "^4.0.0"
[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^24.3.0"
flake8 = "^7.1.1"
typing_extensions = "4.12.2"
pyright = "^1.1.377"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.test] # This part can be left out

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["b_moz"]
